--- a/package.json
+++ b/package.json
@@ -3,21 +3,28 @@
   "version": "1.0.0",
   "description": "Typescript library for the peekaboo project",
   "license": "ISC",
-  "keywords": ["piracy", "movies", "anime", "peekaboo", "tv", "meta"],
+  "keywords": [
+    "piracy",
+    "movies",
+    "anime",
+    "peekaboo",
+    "tv",
+    "meta"
+  ],
   "author": "WinterSunset95",
   "type": "module",
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"build": "npx tsc",
-	"dev": "npx tsc --watch"
+    "build": "npx tsc",
+    "dev": "npx tsc --watch"
   },
   "files": [
-	  "dist/"
+    "dist/"
   ],
   "repository": {
-	  "type": "git",
-	  "url": "git+https://github.com/WinterSunset95/peek-a-boo.ts"
+    "type": "git",
+    "url": "git+https://github.com/WinterSunset95/peek-a-boo.ts"
   },
   "devDependencies": {
     "@types/node": "^22.13.5",
