--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   ],
   "author": "WinterSunset95",
   "type": "module",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts"
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
