--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "WinterSunset95",
   "type": "module",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts"
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tsc",
