--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peek-a-boo.ts",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Typescript library for the peekaboo project",
   "license": "ISC",
   "keywords": [
@@ -17,7 +17,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx tsc",
+    "build": "npx tsc -p tsconfig.json",
     "dev": "npx tsc --watch"
   },
   "files": [
