--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
 		"declaration" : true,
 		"moduleResolution": "Node",
 		"esModuleInterop": true,
-		"target": "ES2018",
-		"module": "commonjs",
+		"target": "ESNext",
+		"module": "ESNext",
 		"strict": true,
 	},
 	"lib": ["esnext"],
