switched from Node to bundler

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dev": "npx tsc --watch"
   },
   "files": [
-    "dist/"
+    "dist/",
+	"src/",
   ],
   "repository": {
     "type": "git",
