--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
 		"outDir": "dist",
 		"rootDir": "src",
 		"declaration" : true,
-		"moduleResolution": "Node",
+		"moduleResolution": "bundler",
 		"esModuleInterop": true,
 		"target": "ESNext",
 		"module": "ESNext",
