--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npx tsc -p tsconfig.json && node dist/run.js",
     "build": "npx tsc -p tsconfig.json",
     "dev": "npx tsc -p tsconfig.json --watch",
     "docs": "typedoc"
@@ -36,6 +36,7 @@
   "dependencies": {
     "@consumet/extensions": "^1.8.1",
     "cheerio": "^1.0.0",
+    "jest": "^29.7.0",
     "socket.io": "^4.8.1",
     "typedoc-plugin-markdown": "^4.4.2"
   }
