--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
   "type": "commonjs",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    }
+  },
   "scripts": {
     "test": "npx tsc -p tsconfig.json && node dist/run.js",
     "build": "npx tsc -p tsconfig.json",
